--- a/CEG4912-gantt-chart/css/style.css
+++ b/CEG4912-gantt-chart/css/style.css
@@ -2,3 +2,11 @@
   width: 0 !important;
   background: red !important;
 }
+
+.anychart-credits-text {
+  display: none;
+}
+
+.anychart-credits-logo {
+  display: none;
+}
